--- a/css/style.css
+++ b/css/style.css
@@ -26,13 +26,17 @@ h1 {
 .box__palabra h2 {
   color: rgb(129, 77, 14);
 }
-.box__palabra .entrada__palabra input {
+.box__palabra .entrada__palabra .inputName {
   width: 50px;
   border: none;
-  border-bottom: 1px solid;
+  color: white;
+  border-bottom: 1px solid black;
   cursor: pointer;
   margin-right: 20px;
   text-align: center;
+}
+.box__palabra .entrada__palabra .modificador {
+  color: black;
 }
 .box__palabra .entrada__palabra input:hover {
   border-bottom: 3px solid rgb(129, 77, 14);
