--- a/sass/style.scss
+++ b/sass/style.scss
@@ -35,13 +35,17 @@ h1{
 
     .entrada__palabra{
 
-        input{
+        .inputName{
             width: 50px;
             border: none;
-            border-bottom: 1px solid;
+            color:white;
+            border-bottom: 1px solid black;
             cursor: pointer;
             margin-right: 20px;
             text-align: center;
+        }
+        .modificador{
+            color:black;
         }
         input:hover{
             border-bottom: 3px solid $color-texto;
