--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,9 +10,8 @@ h1{
 
 .box__sentenced{
     display: flex;
-    width: 300px;
-    padding-top: 50px;
-    padding-left: 200px;
+    margin: auto;
+    width: 200px;
 
     .img__horca{
         width: 100%;
@@ -26,8 +25,8 @@ h1{
 }
 
 .box__palabra{
-    padding-top: 100px;
-    padding-left: 50px;
+    text-align: center;
+    padding-top: 30px;
 
     h2{
         color:$color-texto;
@@ -59,19 +58,20 @@ h1{
     }
 }
 
-.box__numeroIntentos{
+.box__numeroIntentos {
     display: flex;
+    flex-direction: column; 
     align-items: center;
-    margin-top: 50px;
-    padding-left: 50px;
+    justify-content: center;
+    text-align: center;
 
-    p{
+    p {
         font-size: 1.3rem;
         font-weight: 700;
         color: $color-texto;
     }
 
-    .contador{
+    .contador {
         padding-left: 20px;
     }
 
