--- a/css/style.css
+++ b/css/style.css
@@ -25,22 +25,33 @@ h1 {
 .box__palabra h2 {
   color: rgb(129, 77, 14);
 }
+.box__palabra .entrada__palabra {
+  margin-bottom: 50px;
+}
 .box__palabra .entrada__palabra .inputName {
   width: 50px;
   border: none;
-  color: white;
+  color: black;
+  border-bottom: 1px solid black;
+  margin-right: 20px;
+  text-align: center;
+}
+
+.intentoDeUsuario {
+  width: 50px;
+  border: none;
+  color: black;
   border-bottom: 1px solid black;
   cursor: pointer;
   margin-right: 20px;
   text-align: center;
 }
-.box__palabra .entrada__palabra .modificador {
-  color: black;
+
+.intentoDeUsuario:hover {
+  width: 60px;
 }
-.box__palabra .entrada__palabra input:hover {
-  border-bottom: 3px solid rgb(129, 77, 14);
-}
-.box__palabra .entrada__palabra button {
+
+button {
   width: 80px;
   background-color: rgb(129, 77, 14);
   color: aliceblue;
